--- a/back_end/src/main/resources/templates/index.html
+++ b/back_end/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Travel Diary</title>
+  <title>Allowance Chart</title>
   <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{css/templatemo-style.css}">
   <link rel="stylesheet" th:href="@{fontawesome/css/all.min.css}">
@@ -15,36 +15,7 @@
   <div class="loader-section section-left"></div>
   <div class="loader-section section-right"></div>
 </div>
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{#}">
-      <i class="fas fa-film mr-2"></i>
-      Travel_Diary
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link nav-link-1 active" aria-current="page" th:href="@{index}">Photos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-2" th:href="@{videos}">Videos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-3" th:href="@{about}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-4" th:href="@{contact}">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<div th:replace="/navbar::nav"></div>
 <script th:src="@{js/plugins.js}"></script>
 <script>
   $(window).on("load", function () {
