--- a/back_end/src/main/resources/templates/navbar.html
+++ b/back_end/src/main/resources/templates/navbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{#}">
+    <a class="navbar-brand" th:href="@{index}">
       <i class="fas fa-landmark mr-2"></i>
       Allowance_Chart
     </a>
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link nav-link-1 active" aria-current="page" th:href="@{index}">Income</a>
+          <a class="nav-link nav-link-1 active" aria-current="page" th:href="@{income}">Income</a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-2" th:href="@{videos}">Spending</a>
