--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -12,6 +12,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
   />
+  <style>
+    #my_modal {
+      display: none;
+      width: 300px;
+      padding: 20px 60px;
+      background-color: #fefefe;
+      border: 1px solid #888;
+      border-radius: 3px;
+    }
+
+    #my_modal .modal_close_btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  </style>
 </head>
 <body>
 <div id="loader-wrapper">
@@ -22,7 +38,6 @@
 
 <!--nav bar-->
 <div th:replace="/navbar::nav"></div>
-
 <!--content-->
 <div class="container-fluid tm-container-content tm-mt-60">
   <div class="card shadow mb-4">
@@ -30,6 +45,15 @@
       <h2 class="col-12 tm-text-primary">
         Income_Chart
       </h2>
+    </div>
+    <div class="col-12 d-flex justify-content-end align-items-md-end">
+      <a id="popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
+         style="padding:12px 20px 14px; margin-left: 20px"></a>
+    </div>
+    <div class="my_modal">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore eveniet laborum repellat sit distinctio, ipsa rem dicta alias velit? Repellat doloribus mollitia dolorem voluptatum ex
+      reiciendis aut in incidunt?
+      <a class="modal_close_btn">exit</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -83,6 +107,65 @@
 <script>
   $(window).on("load", function () {
     $('body').addClass('loaded');
+  });
+
+  function move_to_edit_page() {
+    location.href = "/edit";
+  }
+
+  function modal(id) {
+    const zIndex = 9999;
+    const modal = document.getElementById(id);
+
+    // 모달 div 뒤에 희끄무레한 레이어
+    const bg = document.createElement('div');
+    bg.setStyle({
+      position: 'fixed',
+      zIndex: zIndex,
+      left: '0px',
+      top: '0px',
+      width: '100%',
+      height: '100%',
+      overflow: 'auto',
+      // 레이어 색갈은 여기서 바꾸면 됨
+      backgroundColor: 'rgba(0,0,0,0.4)'
+    });
+    document.body.append(bg);
+
+    // 닫기 버튼 처리, 시꺼먼 레이어와 모달 div 지우기
+    modal.querySelector('.modal_close_btn').addEventListener('click', function () {
+      bg.remove();
+      modal.style.display = 'none';
+    });
+
+    modal.setStyle({
+      position: 'fixed',
+      display: 'block',
+      boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)',
+
+      // 시꺼먼 레이어 보다 한칸 위에 보이기
+      zIndex: zIndex + 1,
+
+      // div center 정렬
+      top: '50%',
+      left: '50%',
+      transform: 'translate(-50%, -50%)',
+      msTransform: 'translate(-50%, -50%)',
+      webkitTransform: 'translate(-50%, -50%)'
+    });
+  }
+
+  // Element 에 style 한번에 오브젝트로 설정하는 함수 추가
+  Element.prototype.setStyle = function (styles) {
+    for (const k in styles) {
+      this.style[k] = styles[k];
+    }
+    return this;
+  };
+
+  document.getElementById('popup_open_btn').addEventListener('click', function () {
+    // 모달창 띄우기
+    modal('my_modal');
   });
 </script>
 </html>
