--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -10,22 +10,67 @@
   <link rel="stylesheet" th:href="@{fonts/boxicons.scss}">
   <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+      th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}"
   />
   <style>
-    #my_modal {
+    #modal.modal-overlay {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
       display: none;
-      width: 300px;
-      padding: 20px 60px;
-      background-color: #fefefe;
-      border: 1px solid #888;
-      border-radius: 3px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255, 255, 255, 0.25);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(1.5px);
+      -webkit-backdrop-filter: blur(1.5px);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
     }
 
-    #my_modal .modal_close_btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
+    #modal .modal-window {
+      background: rgba(69, 139, 197, 0.70);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(13.5px);
+      -webkit-backdrop-filter: blur(13.5px);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      width: 400px;
+      height: 500px;
+      position: relative;
+      top: -100px;
+      padding: 10px;
+    }
+
+    #modal .title {
+      padding-left: 10px;
+      display: inline;
+      text-shadow: 1px 1px 2px gray;
+      color: white;
+
+    }
+
+    #modal .title h2 {
+      display: inline;
+    }
+
+    #modal .close-area {
+      display: inline;
+      float: right;
+      padding-right: 10px;
+      cursor: pointer;
+      text-shadow: 1px 1px 2px gray;
+      color: white;
+    }
+
+    #modal .content {
+      margin-top: 20px;
+      padding: 0 10px;
+      text-shadow: 1px 1px 2px gray;
+      color: white;
     }
   </style>
 </head>
@@ -49,11 +94,6 @@
     <div class="col-12 d-flex justify-content-end align-items-md-end">
       <a id="popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
          style="padding:12px 20px 14px; margin-left: 20px"></a>
-    </div>
-    <div class="my_modal">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore eveniet laborum repellat sit distinctio, ipsa rem dicta alias velit? Repellat doloribus mollitia dolorem voluptatum ex
-      reiciendis aut in incidunt?
-      <a class="modal_close_btn">exit</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -92,16 +132,28 @@
               </div>
             </td>
           </tr>
-
-
           </tbody>
         </table>
       </div>
     </div>
   </div>
-
+  <div id="modal" class="modal-overlay">
+    <div class="modal-window">
+      <div class="title">
+        <h2>Edit</h2>
+      </div>
+      <div class="close-area">
+        <a id="modal_close_btn" class="modal_close_btn">exit</a>
+      </div>
+      <div class="content">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore eveniet laborum
+        repellat sit distinctio, ipsa rem dicta alias velit? Repellat doloribus mollitia dolorem
+        voluptatum ex
+        reiciendis aut in incidunt?
+      </div>
+    </div>
+  </div>
 </div>
-
 </body>
 <script th:src="@{js/plugins.js}"></script>
 <script>
@@ -109,63 +161,84 @@
     $('body').addClass('loaded');
   });
 
-  function move_to_edit_page() {
-    location.href = "/edit";
-  }
+  const modal = document.getElementById('modal');
+  const editBtn = document.getElementById('popup_open_btn');
+  const modalCloseBtn = document.getElementById('modal_close_btn');
 
-  function modal(id) {
-    const zIndex = 9999;
-    const modal = document.getElementById(id);
+  editBtn.addEventListener('click', ev => {
+    modal.style.display = 'flex';
+  })
 
-    // 모달 div 뒤에 희끄무레한 레이어
-    const bg = document.createElement('div');
-    bg.setStyle({
-      position: 'fixed',
-      zIndex: zIndex,
-      left: '0px',
-      top: '0px',
-      width: '100%',
-      height: '100%',
-      overflow: 'auto',
-      // 레이어 색갈은 여기서 바꾸면 됨
-      backgroundColor: 'rgba(0,0,0,0.4)'
-    });
-    document.body.append(bg);
+  modalCloseBtn.addEventListener('click', ev => {
+    modal.style.display = 'none';
+  })
 
-    // 닫기 버튼 처리, 시꺼먼 레이어와 모달 div 지우기
-    modal.querySelector('.modal_close_btn').addEventListener('click', function () {
-      bg.remove();
-      modal.style.display = 'none';
-    });
+  modal.addEventListener("click", ev => {
+    const evTarget = ev.target
+    if (evTarget.classList.contains("modal-overlay")) {
+      modal.style.display = "none"
+    }
+  })
 
-    modal.setStyle({
-      position: 'fixed',
-      display: 'block',
-      boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)',
+  window.addEventListener("keyup", e => {
+    if (modal.style.display === "flex" && e.key === "Escape") {
+      modal.style.display = "none"
+    }
+  })
+  // function modal(id) {
+  //   const zIndex = 9999;
+  //   const modal = document.getElementById(id);
+  //
+  //   // 모달 div 뒤에 희끄무레한 레이어
+  //   const bg = document.createElement('div');
+  //   bg.setStyle({
+  //     position: 'fixed',
+  //     zIndex: zIndex,
+  //     left: '0px',
+  //     top: '0px',
+  //     width: '100%',
+  //     height: '100%',
+  //     overflow: 'auto',
+  //     // 레이어 색갈은 여기서 바꾸면 됨
+  //     backgroundColor: 'rgba(0,0,0,0.4)'
+  //   });
+  //   document.body.append(bg);
+  //
+  //   // 닫기 버튼 처리, 시꺼먼 레이어와 모달 div 지우기
+  //   modal.querySelector('.modal_close_btn').addEventListener('click', function () {
+  //     const modal = document.getElementById('modal');
+  //     modal.style.display = 'none';
+  //   });
 
-      // 시꺼먼 레이어 보다 한칸 위에 보이기
-      zIndex: zIndex + 1,
-
-      // div center 정렬
-      top: '50%',
-      left: '50%',
-      transform: 'translate(-50%, -50%)',
-      msTransform: 'translate(-50%, -50%)',
-      webkitTransform: 'translate(-50%, -50%)'
-    });
-  }
+  //   modal.setStyle({
+  //     position: 'fixed',
+  //     display: 'block',
+  //     boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)',
+  //
+  //     // 시꺼먼 레이어 보다 한칸 위에 보이기
+  //     zIndex: zIndex + 1,
+  //
+  //     // div center 정렬
+  //     top: '50%',
+  //     left: '50%',
+  //     transform: 'translate(-50%, -50%)',
+  //     msTransform: 'translate(-50%, -50%)',
+  //     webkitTransform: 'translate(-50%, -50%)'
+  //   });
+  // }
 
   // Element 에 style 한번에 오브젝트로 설정하는 함수 추가
-  Element.prototype.setStyle = function (styles) {
-    for (const k in styles) {
-      this.style[k] = styles[k];
-    }
-    return this;
-  };
+  // Element.prototype.setStyle = function (styles) {
+  //   for (const k in styles) {
+  //     this.style[k] = styles[k];
+  //   }
+  //   return this;
+  // };
 
-  document.getElementById('popup_open_btn').addEventListener('click', function () {
-    // 모달창 띄우기
-    modal('my_modal');
-  });
+  // document.getElementById('popup_open_btn').addEventListener('click', function () {
+  //   // 모달창 띄우기
+  //   const modal = document.getElementById('modal');
+  //   modal.style.display = 'flex';
+  // });
 </script>
 </html>
