--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -32,7 +32,7 @@
     }
 
     #modal .modal-window {
-      background: rgba(69, 139, 197, 0.70);
+      background: rgba(255, 255, 255, 0.70);
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
       backdrop-filter: blur(13.5px);
       -webkit-backdrop-filter: blur(13.5px);
@@ -55,6 +55,7 @@
 
     #modal .title h2 {
       display: inline;
+      color: #009999;
     }
 
     #modal .close-area {
@@ -63,7 +64,7 @@
       padding-right: 10px;
       cursor: pointer;
       text-shadow: 1px 1px 2px gray;
-      color: white;
+      color: #1b1e21;
     }
 
     #modal .content {
@@ -72,6 +73,7 @@
       text-shadow: 1px 1px 2px gray;
       color: white;
     }
+
   </style>
 </head>
 <body>
@@ -137,19 +139,39 @@
       </div>
     </div>
   </div>
+  <!-- Modal Page -->
   <div id="modal" class="modal-overlay">
     <div class="modal-window">
-      <div class="title">
-        <h2>Edit</h2>
+      <div class="title tm-text-primary">
+        <h2>EDIT</h2>
       </div>
       <div class="close-area">
         <a id="modal_close_btn" class="modal_close_btn">exit</a>
       </div>
       <div class="content">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore eveniet laborum
-        repellat sit distinctio, ipsa rem dicta alias velit? Repellat doloribus mollitia dolorem
-        voluptatum ex
-        reiciendis aut in incidunt?
+        <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
+          <div class="form-group">
+            <input type="text" name="title" class="form-control rounded-0" placeholder="Title" required/>
+          </div>
+          <div class="form-group">
+            <input type="number" name="price" class="form-control rounded-0" placeholder="Price" required/>
+          </div>
+          <div class="form-group">
+            <select class="form-control" id="category-select" name="category">
+              <option value="-">Subject</option>
+              <option value="eating">Sales &amp; Marketing</option>
+              <option value="shopping">Creative Design</option>
+              <option value="culture">UI / UX</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <textarea rows="6" name="message" class="form-control rounded-0" placeholder="Message"></textarea>
+          </div>
+
+          <div class="form-group tm-text-right">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -185,60 +207,5 @@
       modal.style.display = "none"
     }
   })
-  // function modal(id) {
-  //   const zIndex = 9999;
-  //   const modal = document.getElementById(id);
-  //
-  //   // 모달 div 뒤에 희끄무레한 레이어
-  //   const bg = document.createElement('div');
-  //   bg.setStyle({
-  //     position: 'fixed',
-  //     zIndex: zIndex,
-  //     left: '0px',
-  //     top: '0px',
-  //     width: '100%',
-  //     height: '100%',
-  //     overflow: 'auto',
-  //     // 레이어 색갈은 여기서 바꾸면 됨
-  //     backgroundColor: 'rgba(0,0,0,0.4)'
-  //   });
-  //   document.body.append(bg);
-  //
-  //   // 닫기 버튼 처리, 시꺼먼 레이어와 모달 div 지우기
-  //   modal.querySelector('.modal_close_btn').addEventListener('click', function () {
-  //     const modal = document.getElementById('modal');
-  //     modal.style.display = 'none';
-  //   });
-
-  //   modal.setStyle({
-  //     position: 'fixed',
-  //     display: 'block',
-  //     boxShadow: '0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)',
-  //
-  //     // 시꺼먼 레이어 보다 한칸 위에 보이기
-  //     zIndex: zIndex + 1,
-  //
-  //     // div center 정렬
-  //     top: '50%',
-  //     left: '50%',
-  //     transform: 'translate(-50%, -50%)',
-  //     msTransform: 'translate(-50%, -50%)',
-  //     webkitTransform: 'translate(-50%, -50%)'
-  //   });
-  // }
-
-  // Element 에 style 한번에 오브젝트로 설정하는 함수 추가
-  // Element.prototype.setStyle = function (styles) {
-  //   for (const k in styles) {
-  //     this.style[k] = styles[k];
-  //   }
-  //   return this;
-  // };
-
-  // document.getElementById('popup_open_btn').addEventListener('click', function () {
-  //   // 모달창 띄우기
-  //   const modal = document.getElementById('modal');
-  //   modal.style.display = 'flex';
-  // });
 </script>
 </html>
