--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -151,7 +151,7 @@
       <div class="content">
         <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
           <div class="form-group">
-            <input type="text" name="title" class="form-control rounded-0" placeholder="Title" required/>
+            <input type="text" name="item_name" id="item_name" class="form-control rounded-0" placeholder="Item" required/>
           </div>
           <div class="form-group">
             <input type="number" name="price" class="form-control rounded-0" placeholder="Price" required/>
@@ -207,5 +207,13 @@
       modal.style.display = "none"
     }
   })
+  
+  function saveAllowanceChartData() {
+    let allowance_data = {
+      itemName : document.getElementById('item_name').value,
+    };
+
+    console.log(allowance_data);
+  }
 </script>
 </html>
