Add Income category save
income category save 기능 추가

--- a/back_end/src/main/resources/templates/navbar.html
+++ b/back_end/src/main/resources/templates/navbar.html
@@ -22,7 +22,7 @@
           <a class="nav-link nav-link-3" th:href="@{about}">Stats</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-4" th:href="@{contact}">Setting</a>
+          <a class="nav-link nav-link-4" th:href="@{config}">Config</a>
         </li>
       </ul>
     </div>
