--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -151,10 +151,12 @@
       <div class="content">
         <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
           <div class="form-group">
-            <input type="text" name="title" class="form-control rounded-0" placeholder="Title" required/>
+            <input type="text" name="title" class="form-control rounded-0" placeholder="Title"
+                   required/>
           </div>
           <div class="form-group">
-            <input type="number" name="price" class="form-control rounded-0" placeholder="Price" required/>
+            <input type="number" name="price" class="form-control rounded-0" placeholder="Price"
+                   required/>
           </div>
           <div class="form-group">
             <select class="form-control" id="category-select" name="category">
@@ -179,6 +181,20 @@
 </body>
 <script th:src="@{js/plugins.js}"></script>
 <script>
+  function saveAllowance() {
+    const dataBean = {
+      content: $('').val()
+    };
+
+    $.ajax({
+      url: '',
+      type: 'post',
+      data: dataBean,
+    }).done(function (fragment){
+
+    });
+  }
+
   $(window).on("load", function () {
     $('body').addClass('loaded');
   });
