--- a/back_end/src/main/resources/templates/config.html
+++ b/back_end/src/main/resources/templates/config.html
@@ -5,6 +5,8 @@
   <title>Allowance Chart_Config</title>
   <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{css/templatemo-style.css}">
+  <link rel="stylesheet" th:href="@{css/income-modal.css}">
+  <link rel="stylesheet" th:href="@{css/spending-modal.css}">
   <link rel="stylesheet" th:href="@{fontawesome/css/all.min.css}">
   <link rel="stylesheet" th:href="@{vendor/css/core.css}">
   <link rel="stylesheet" th:href="@{fonts/boxicons.scss}">
@@ -12,69 +14,6 @@
       rel="stylesheet"
       th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}"
   />
-  <style>
-    #modal.modal-overlay {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      top: 0;
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.25);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(1.5px);
-      -webkit-backdrop-filter: blur(1.5px);
-      border-radius: 10px;
-      border: 1px solid rgba(255, 255, 255, 0.18);
-    }
-
-    #modal .modal-window {
-      background: rgba(255, 255, 255, 0.70);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(13.5px);
-      -webkit-backdrop-filter: blur(13.5px);
-      border-radius: 10px;
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      width: 400px;
-      height: 500px;
-      position: relative;
-      top: -100px;
-      padding: 10px;
-    }
-
-    #modal .title {
-      padding-left: 10px;
-      display: inline;
-      text-shadow: 1px 1px 2px gray;
-      color: white;
-
-    }
-
-    #modal .title h2 {
-      display: inline;
-      color: #009999;
-    }
-
-    #modal .close-area {
-      display: inline;
-      float: right;
-      padding-right: 10px;
-      cursor: pointer;
-      text-shadow: 1px 1px 2px gray;
-      color: #1b1e21;
-    }
-
-    #modal .content {
-      margin-top: 20px;
-      padding: 0 10px;
-      text-shadow: 1px 1px 2px gray;
-      color: white;
-    }
-
-  </style>
 </head>
 <body>
 <div id="loader-wrapper">
@@ -96,7 +35,7 @@
         <a id="income_popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
            style="padding:12px 20px 14px; margin-left: 20px"></a>
       </div>
-      <table class="table table-striped" id="dataTable" width="100%" cellspacing="0">
+      <table class="table table-striped" id="income_data_table" width="100%" cellspacing="0">
         <thead>
         <tr>
           <th>Index</th>
@@ -139,7 +78,7 @@
         <a id="spending_popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
            style="padding:12px 20px 14px; margin-left: 20px"></a>
       </div>
-      <table class="table table-striped" id="dataTable" width="100%" cellspacing="0">
+      <table class="table table-striped" id="spending_data_table" width="100%" cellspacing="0">
         <thead>
         <tr>
           <th>Index</th>
@@ -188,11 +127,13 @@
     <div class="content">
       <form id="income_contact-form" action="" method="POST" class="tm-contact-form mx-auto">
         <div class="form-group">
-          <input type="text" id="income_type" name="income_type" class="form-control rounded-0" placeholder="Type"
+          <input type="text" id="income_type" name="income_type" class="form-control rounded-0"
+                 placeholder="Type"
                  required/>
         </div>
         <div class="form-group tm-text-right">
-          <button type="button" class="btn btn-primary" onclick="saveIncomeCategory()">Submit</button>
+          <button type="button" class="btn btn-primary" onclick="saveIncomeCategory()">Submit
+          </button>
         </div>
       </form>
     </div>
@@ -210,16 +151,19 @@
     <div class="content">
       <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
         <div class="form-group">
-          <input type="text" id="spending_type" name="spending_type" class="form-control rounded-0" placeholder="Type"
+          <input type="text" id="spending_type" name="spending_type" class="form-control rounded-0"
+                 placeholder="Type"
                  required/>
         </div>
         <div class="form-group tm-text-right">
-          <button type="button" class="btn btn-primary" onclick="saveCategory()">Submit</button>
+          <button type="button" class="btn btn-primary" onclick="saveSpendingCategory()">Submit
+          </button>
         </div>
       </form>
     </div>
   </div>
 </div>
+
 </body>
 <script th:src="@{js/plugins.js}"></script>
 <script>
@@ -227,15 +171,11 @@
     const dataBean = {
       "name": document.getElementById('income_type').value
     };
-
-    $.ajax({
-      url: '/category/info',
-      contentType: 'application/json',
-      type: 'post',
-      data: JSON.stringify(dataBean),
-    }).done(function (fragment) {
-      console.log("success");
-    });
+    if(!dataBean.name.length) {
+      alert('카테고리 값을 입력바랍니다.');
+      return;
+    }
+    saveCategory(dataBean);
   }
 
   function saveSpendingCategory() {
@@ -243,11 +183,20 @@
       "name": document.getElementById('spending_type').value
     };
 
+    if(!dataBean.name.length) {
+      alert('카테고리 값을 입력바랍니다.');
+      return;
+    }
+
+    saveCategory(dataBean);
+  }
+
+  function saveCategory(data) {
     $.ajax({
       url: '/category/info',
       contentType: 'application/json',
       type: 'post',
-      data: JSON.stringify(dataBean),
+      data: JSON.stringify(data),
     }).done(function (fragment) {
       console.log("success");
     });
@@ -257,33 +206,50 @@
     $('body').addClass('loaded');
   });
 
-  const modal = document.getElementById('modal');
+  const income_modal = document.getElementById('income_modal');
+  const spending_modal = document.getElementById('spending_modal');
   const income_category_edit_btn = document.getElementById('income_popup_open_btn');
   const spending_category_edit_btn = document.getElementById('spending_popup_open_btn');
-  const modalCloseBtn = document.getElementById('modal_close_btn');
+  const income_modal_close_btn = document.getElementById('income_modal_close_btn');
+  const spending_modal_close_btn = document.getElementById('spending_modal_close_btn');
 
   income_category_edit_btn.addEventListener('click', ev => {
-    modal.style.display = 'flex';
+    income_modal.style.display = 'flex';
   })
 
   spending_category_edit_btn.addEventListener('click', ev => {
-
+    spending_modal.style.display = 'flex';
   })
 
-  modalCloseBtn.addEventListener('click', ev => {
-    modal.style.display = 'none';
+  income_modal_close_btn.addEventListener('click', ev => {
+    income_modal.style.display = 'none';
   })
 
-  modal.addEventListener("click", ev => {
+  spending_modal_close_btn.addEventListener('click', ev => {
+    spending_modal.style.display = 'none';
+  })
+
+  income_modal.addEventListener("click", ev => {
     const evTarget = ev.target
     if (evTarget.classList.contains("modal-overlay")) {
-      modal.style.display = "none"
+      income_modal.style.display = "none"
+    }
+  })
+
+  spending_modal.addEventListener("click", ev => {
+    const evTarget = ev.target
+    if (evTarget.classList.contains("modal-overlay")) {
+      spending_modal.style.display = "none"
     }
   })
 
   window.addEventListener("keyup", e => {
-    if (modal.style.display === "flex" && e.key === "Escape") {
-      modal.style.display = "none"
+    if (income_modal.style.display === "flex" && e.key === "Escape") {
+      income_modal.style.display = "none"
+    }
+
+    if (spending_modal.style.display === "flex" && e.key === "Escape") {
+      spending_modal.style.display = "none"
     }
   })
 </script>
