--- a/back_end/src/main/resources/templates/config.html
+++ b/back_end/src/main/resources/templates/config.html
@@ -35,7 +35,7 @@
         <a id="income_popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
            style="padding:12px 20px 14px; margin-left: 20px"></a>
       </div>
-      <table class="table table-striped" id="income_data_table" width="100%" cellspacing="0">
+      <table class="table table-striped" id="income_table" width="100%" cellspacing="0">
         <thead>
         <tr>
           <th>Index</th>
@@ -43,10 +43,10 @@
           <th>Edit</th>
         </tr>
         </thead>
-        <tbody class="table-border-bottom-0">
-        <tr th:each="incomecategory : ${incomeCategoryList}">
-          <td th:text="${incomecategory.getId()}"></td>
-          <td th:text="${incomecategory.getName()}"></td>
+        <tbody class="table-border-bottom-0" id="income_table_data">
+        <tr>
+          <td></td>
+          <td></td>
           <td>
             <div class="dropdown">
               <button type="button" class="btn p-0 dropdown-toggle hide-arrow"
@@ -78,7 +78,7 @@
         <a id="spending_popup_open_btn" class="btn btn-primary mb-2 fas fa-plus"
            style="padding:12px 20px 14px; margin-left: 20px"></a>
       </div>
-      <table class="table table-striped" id="spending_data_table" width="100%" cellspacing="0">
+      <table class="table table-striped" id="spending_table" width="100%" cellspacing="0">
         <thead>
         <tr>
           <th>Index</th>
@@ -86,7 +86,7 @@
           <th>Edit</th>
         </tr>
         </thead>
-        <tbody class="table-border-bottom-0">
+        <tbody class="table-border-bottom-0" id="spending_table_data">
         <tr>
           <td></td>
           <td></td>
@@ -171,13 +171,41 @@
     $.ajax({
       url: '/category/list/income',
       contentType: 'application/json',
-      type: 'get',
-      data: JSON.stringify(data),
+      type: 'GET',
       dataType: 'json',
       success: function (data) {
-
+        console.log('getIncomeCategory function is success.');
+        drawCategoryTable('#income_table_data', data);
+      },
+      error: function () {
+        alert('Fail to get income category');
       }
+    }).done(function (fragment) {
+      console.log('getIncomeCategory function is end.');
     });
+
+  }
+
+  function drawCategoryTable(draw_table, category_data) {
+    let html_data = "";
+    let category_html_data = "";
+
+    for (let i = 0; category_data.length; i++) {
+      category_html_data = category_html_data
+          + "<td>" + (i + 1) + "</td>"
+          + "<td>" + category_data.name + "</td>"
+          + "<td>" + "<div class='dropdown'>" + "</div>"
+
+          + "</td>";
+    }
+
+
+
+    html_data = html_data
+      + "<td>"
+      + "</td>";
+
+    $(draw_table).html();
   }
 
   function saveIncomeCategory() {
@@ -192,6 +220,7 @@
     }
     saveCategory(dataBean);
   }
+
   function saveSpendingCategory() {
 
     const dataBean = {
@@ -215,7 +244,7 @@
       type: 'post',
       data: JSON.stringify(data),
     }).done(function (fragment) {
-      console.log("success");
+      console.log("save category is end.");
     });
   }
 
