--- a/back_end/src/main/resources/templates/config.html
+++ b/back_end/src/main/resources/templates/config.html
@@ -123,50 +123,27 @@
 </div>
 
 <!--Update Modal Page-->
-<!--<div id="udpate_modal" class="modal-overlay">-->
-<!--  <div class="modal-window">-->
-<!--    <div class="title tm-text-primary">-->
-<!--      <h2>EDIT</h2>-->
-<!--    </div>-->
-<!--    <div class="close-area">-->
-<!--      <a id="update_modal_close_btn" class="modal_close_btn">exit</a>-->
-<!--    </div>-->
-<!--    <div class="content">-->
-<!--      <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">-->
-<!--        <div class="form-group">-->
-<!--          <input type="text" id="type" name="spending_type" class="form-control rounded-0" value="" a required/>-->
-<!--        </div>-->
-<!--        <div class="form-group tm-text-right">-->
-<!--          <button type="button" class="btn btn-primary" onclick="saveSpendingCategory()">Submit-->
-<!--          </button>-->
-<!--        </div>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<div id="spending_update_modal" class="modal-overlay">-->
-<!--  <div class="modal-window">-->
-<!--    <div class="title tm-text-primary">-->
-<!--      <h2>Update Spending Category</h2>-->
-<!--    </div>-->
-<!--    <div class="close-area">-->
-<!--      <a id="update_spending_modal_close_btn" class="modal_close_btn">exit</a>-->
-<!--    </div>-->
-<!--    <div class="content">-->
-<!--      <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">-->
-<!--        <div class="form-group">-->
-<!--          <input type="text" id="updated_spending_value" name="updated_spending_value" class="form-control rounded-0"-->
-<!--                 placeholder="Type"-->
-<!--                 required/>-->
-<!--        </div>-->
-<!--        <div class="form-group tm-text-right">-->
-<!--          <button type="button" class="btn btn-primary" onclick="saveSpendingCategory()">Submit-->
-<!--          </button>-->
-<!--        </div>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div id="udpate_modal" class="modal-overlay">
+  <div class="modal-window">
+    <div class="title tm-text-primary">
+      <h2>EDIT</h2>
+    </div>
+    <div class="close-area">
+      <a id="update_modal_close_btn" class="modal_close_btn">exit</a>
+    </div>
+    <div class="content">
+      <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
+        <div class="form-group">
+          <input type="text" id="type" name="spending_type" class="form-control rounded-0" value="" required/>
+        </div>
+        <div class="form-group tm-text-right">
+          <button type="button" class="btn btn-primary" onclick="saveSpendingCategory()">Submit
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
 
 </body>
@@ -257,12 +234,7 @@
     }
   }
 
-  function updateCategory(category_id) {
-    const requestData = {
-      "name": document.getElementById('income_type').value,
-      "type": "income"
-    };
-
+  function updateCategory(category_id, requestData) {
     $.ajax({
       url: '/category/info/' + category_id,
       contentType: 'application/json',
