--- a/back_end/src/main/resources/templates/config.html
+++ b/back_end/src/main/resources/templates/config.html
@@ -135,10 +135,11 @@
     <div class="content">
       <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
         <div class="form-group">
-          <input type="text" id="type" name="spending_type" class="form-control rounded-0" value="" required/>
+          <input type="text" id="update_type" name="spending_type" class="form-control rounded-0" value="" required/>
+          <input type="hidden" id="type_id" name="type_id" class="form-control rounded-0" value="" required/>
         </div>
         <div class="form-group tm-text-right">
-          <button type="button" class="btn btn-primary" onclick="saveSpendingCategory()">Submit
+          <button type="button" class="btn btn-primary" onclick="updateCategory()">Submit
           </button>
         </div>
       </form>
@@ -216,12 +217,12 @@
     for (let index in category_data) {
       let html_data = "";
       html_data += "<tr>";
-      html_data += "<td>" + (index + 1) + "</td>";
+      html_data += "<td>" + (Number(index) + 1) + "</td>";
       html_data += "<td>" + category_data[index].name + "</td>";
       html_data += "<td>";
       html_data += "<div>";
-      html_data += "<a style='color: #697a8d; padding: 5px' href='javascript:showUpdateCategoryModal("
-          + category_data[index].id + ", " + draw_table + ");'>"
+      html_data += "<a style='color: #697a8d; padding: 5px' href='javascript:void("
+          + category_data[index].id + ");' onclick='showUpdateCategoryModal(\"" + String(category_data[index].name) + "\"," + category_data[index].id + ")'>"
       html_data += "<i class='fas fa-edit'></i>"
       html_data += "</a>";
       html_data += "<a style='color: #697a8d; padding: 5px' href='javascript:void("
@@ -235,13 +236,20 @@
     }
   }
 
-  function updateCategory(category_id, requestData) {
+  function updateCategory() {
+    const update_type = document.getElementById('update_type').value;
+    const category_id = document.getElementById('type_id').value;
+
+    const dataBean = {
+      "name": update_type
+    };
+
     $.ajax({
       url: '/category/info/' + category_id,
       contentType: 'application/json',
       type: 'PUT',
       dataType: 'json',
-      data: JSON.stringify(requestData),
+      data: JSON.stringify(dataBean),
       success: function (data) {
         console.log('updateCategory function is success.');
         getSpendingCategory();
@@ -251,7 +259,7 @@
         alert('Fail to get spending category');
       }
     }).done(function (fragment) {
-      console.log('getSpendingCategory function is end.');
+      console.log('Update category function is end.');
     });
   }
 
@@ -297,10 +305,10 @@
     });
   }
 
-  function showUpdateCategoryModal(id, type) {
+  function showUpdateCategoryModal(type, id) {
+    document.getElementById('update_type').value = type;
+    document.getElementById('type_id').value = id;
     update_modal.style.display = 'flex';
-
-    updateCategory(id);
   }
 
   $(window).on("load", function () {
