--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" th:href="@{css/templatemo-style.css}">
   <link rel="stylesheet" th:href="@{fontawesome/css/all.min.css}">
   <link rel="stylesheet" th:href="@{vendor/css/core.css}">
-  <link rel="stylesheet" th:href="@{fonts/boxicons.scss}">
+  <!--  <link rel="stylesheet" th:href="@{fonts/boxicons.scss}">-->
   <link
       rel="stylesheet"
       th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}"
@@ -149,15 +149,18 @@
         <a id="modal_close_btn" class="modal_close_btn">exit</a>
       </div>
       <div class="content">
-        <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
+        <form id="contact-form" action="" method="post" class="tm-contact-form mx-auto">
           <div class="form-group">
-            <input type="text" id="item" name="item" class="form-control rounded-0" placeholder="item" required/>
+            <input type="text" id="item" name="item" class="form-control rounded-0"
+                   placeholder="item" required/>
           </div>
           <div class="form-group">
-            <input type="number" id="price" name="price" class="form-control rounded-0" placeholder="price" required/>
+            <input type="number" id="price" name="price" class="form-control rounded-0"
+                   placeholder="price" required/>
           </div>
           <div class="form-group">
-            <input type="date" id="income_time" name="income_time" class="form-control rounded-0" required/>
+            <input type="date" id="income_time" name="income_time" class="form-control rounded-0"
+                   required/>
           </div>
           <div class="form-group">
             <select class="form-control" id="category-select" name="category-select">
@@ -165,10 +168,12 @@
             </select>
           </div>
           <div class="form-group">
-            <textarea rows="3" name="message" class="form-control rounded-0" placeholder="Message"></textarea>
+            <textarea rows="3" name="message" class="form-control rounded-0"
+                      placeholder="Message"></textarea>
           </div>
           <div class="form-group tm-text-right">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="saveAllowanceData()">Submit
+            </button>
           </div>
         </form>
       </div>
@@ -178,22 +183,6 @@
 </body>
 <script th:src="@{js/plugins.js}"></script>
 <script>
-  function saveAllowance() {
-    const dataBean = {
-      "itemName": document.getElementById("item").value,
-      "incomeTime": document.getElementById('income_time').value,
-      "memo": document.getElementById('memo').value,
-      "money": document.getElementById('price').value
-    };
-
-    $.ajax({
-      url: '',
-      type: 'post',
-      data: dataBean,
-    }).done(function (fragment) {
-
-    });
-  }
 
   $(window).on("load", function () {
     $('body').addClass('loaded');
@@ -204,7 +193,7 @@
   const modalCloseBtn = document.getElementById('modal_close_btn');
 
   editBtn.addEventListener('click', ev => {
-    getIncomeChartCategory();
+    getIncomeCategory();
     modal.style.display = 'flex';
   })
 
@@ -225,27 +214,33 @@
     }
   })
 
-  function saveAllowanceChartData() {
-    let allowance_data = {
-      itemName: document.getElementById('item_name').value,
-    };
+  /**
+   * Data 저장 함수
+   * */
+  function saveAllowanceData() {
+    const data = {
+      "itemName": document.getElementById('item').value,
+      "money": document.getElementById('price').value,
+      "memo": document.getElementById('memo').value,
+      "informationTime": document.getElementById('income_time').value,
+    }
 
-    console.log(allowance_data);
+    alert(JSON.stringify(data));
   }
 
-  function getIncomeChartCategory() {
+  function getIncomeCategory() {
     $.ajax({
-      url: '/category/list/income',
-      type: 'GET',
+      url: "/category/list/income",
+      type: "GET",
       success: function (data) {
-        drawCategoryType(data);
+        drawCategory(data);
       }
-    }).done(function (fragment) {
-      console.log("Get category function is end")
+    }).done(function () {
+      console.log("Get category information is success");
     });
   }
 
-  function drawCategoryType(data) {
+  function drawCategory(data) {
     let category_data = $("#category-select");
     category_data.empty();
 
@@ -255,5 +250,6 @@
       category_data.append(html_data);
     }
   }
+
 </script>
 </html>
